# nip.io

./: .gitignore  .travis.yml  DNSREBIND.md  Dockerfile  LICENSE.txt  README.md  TODO.md  TODO.txt  build.sh  build_and_run_docker.sh  dist.sh  dist.version  dns-rebind.md  nip-io  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  test.yaml
nipio/: backend.conf  backend.py  nip-io  nipio
nipio_tests/: __init__.py  backend_test.conf  backend_test.py  backend_test_no_blacklist.conf  backend_test_no_lists.conf
pdns/: pdns.conf
src/: backend.conf  backend.py
